--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Chango&family=Luckiest+Guy&family=Train+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
+#logo{
+    width: 100px;
+    height: 40px;
+    background-color: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.welcome{
+    font-family: 'Train One', cursive;
+}
+#tagline{
+    font-family: 'Chango', cursive;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#home{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    background: linear-gradient(-45deg,#EE7752,#E73ECE,#23A6D5,#23D5AB);
+    background-size: 400% 400%;
+    position: relative;
+    animation: changing 10s ease-in-out infinite;
+   
+}
+#error_page{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#about_page{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    
+}
+.dev{
+    font-family: 'Luckiest Guy', cursive;
+}
+#about_form{
+    display: flex;
+    flex-direction: row;
+    border-radius: 15px;
+    box-shadow: -25px 25px 25px rgba(255,255,255,0.1), 25px 25px 25px rgba(0,0,0,0.2), inset -5px 5px 5px rgba(255,255,255,0.1), 5px 5px 5px rgba(0,0,0,0.2);
+}
+#aboutimg{
+    width: 500px;
+    height: 500px;
+}
+.contact_info{
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.info{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 40px;
+    font-size: 2rem;
+    
+    font-family: 'Dela Gothic One', cursive;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: -25px 25px 25px rgba(255,255,255,0.1), 25px 25px 25px rgba(0,0,0,0.2), inset -5px 5px 5px rgba(255,255,255,0.1), 5px 5px 5px rgba(0,0,0,0.2);
+}
+@keyframes changing{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0 50%;
+    }
+}
+#sigin_form{
+    /* background-color: white; */
+    /* background: linear-gradient(-45deg,#68bddb,#23D5AB); */
+    border-radius: 15px;
+    box-shadow: -25px 25px 25px rgba(255,255,255,0.1), 25px 25px 25px rgba(0,0,0,0.2), inset -5px 5px 5px rgba(255,255,255,0.1), 5px 5px 5px rgba(0,0,0,0.2);
+}
+#contact_form{
+    /* background: linear-gradient(-45deg,#23A6D5,#23D5AB); */
+    /* background-color: white; */
+    border-radius: 15px;
+    box-shadow: -25px 25px 25px rgba(255,255,255,0.1), 25px 25px 25px rgba(0,0,0,0.2), inset -5px 5px 5px rgba(255,255,255,0.1), 5px 5px 5px rgba(0,0,0,0.2);
+}
+#signup_form{
+    /* background-color: white; */
+    /* background: linear-gradient(-45deg,#23A6D5,#23D5AB); */
+    border-radius: 15px;
+    box-shadow: -25px 25px 25px rgba(255,255,255,0.1), 25px 25px 25px rgba(0,0,0,0.2), inset -5px 5px 5px rgba(255,255,255,0.1), 5px 5px 5px rgba(0,0,0,0.2);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#tables{
+    margin: auto;
+    /* padding: auto; */
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table{
+    margin-left: 40px;
 }
